force-app/main/default/objects/Order_Line_Item__c/fields/Food_Order__c.field-meta.xml
<CustomField>
    <fullName>Food_Order__c</fullName>
    <description>What food was ordered.</description>
    <inlineHelpText>What food was ordered.</inlineHelpText>
    <label>Food Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>