force-app/main/default/objects/Order_Line_Item__c/fields/Menu_Item__c.field-meta.xml
<CustomField>
    <fullName>Menu_Item__c</fullName>
    <description>Menu Items for the Order.</description>
    <inlineHelpText>Menu Items for the Order.</inlineHelpText>
    <label>Menu Item</label>
    <referenceTo>Menu_Item__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>