force-app/main/default/objects/Order_Line_Item__c/fields/Price_to_Make__c.field-meta.xml
<CustomField>
    <fullName>Price_to_Make__c</fullName>
    <label>Price to Make</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>